# e-commerce-data-olap

./: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.frontend.json  tsconfig.json
.github/: dependabot.yml
db/queries/: inspect-source.sql  inspect-warehouse.sql  restart-control.sql  truncate-warehouse.sql
db/sql/: inspect-tables.sql
db/warehouse/: supabase-types.ts
etl/: .env.example  pyproject.toml
etl/src/: config.py  db.py  extract.py  load.py  main.py  models.py  transform.py  warehouse_models.py
etl/src/utils/: supabase_utils.py
src/: App.tsx  RiderDemographics.tsx  SalesDrilldown.tsx  main.tsx  server.ts
supabase/: config.toml
